--- a/content/courses/nlp2022.md
+++ b/content/courses/nlp2022.md
@@ -3,12 +3,12 @@
 widget = "about_research"  # See https://sourcethemes.com/academic/docs/page-builder/
 headless = false  # This file represents a page section.
 active = true  # Activate this widget? true/false
-weight = 200  # Order that this section will appear in.
+weight = 1  # Order that this section will appear in.
 
-title = "Computer Engineering Junior Seminar"
+title = "CS 425/CS 625: Natural Language Processing (Spring 2022)"
 
 # Choose the user profile to display
 # This should be the username of a profile in your `content/authors/` folder.
 # See https://sourcethemes.com/academic/docs/get-started/#introduce-yourself
-author = "teach-juniorSeminar"
+author = "nlp2022"
 +++
