--- a/content/courses/pc2021.md
+++ b/content/courses/pc2021.md
@@ -3,12 +3,12 @@
 widget = "about_research"  # See https://sourcethemes.com/academic/docs/page-builder/
 headless = false  # This file represents a page section.
 active = true  # Activate this widget? true/false
-weight = 200  # Order that this section will appear in.
+weight = 2  # Order that this section will appear in.
 
-title = "Asynchronous Circuit Design"
+title = "CS 309: Parallel Computing (Autumn 2021)"
 
 # Choose the user profile to display
 # This should be the username of a profile in your `content/authors/` folder.
 # See https://sourcethemes.com/academic/docs/get-started/#introduce-yourself
-author = "teach-async"
+author = "pc2021"
 +++
